fix: ignore hrid on CRD export to use name (regression)